removed vh from jumbotrono when in mobile to prevent images from overlapping about section when scrolling

--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ h2 {
     background-position: center;
     background-color: white;
     background-size: cover;
-    height: 100vh;
     padding-top: 175px;
 }
 
